--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,17 @@
-<div class="container" >
-    <%= form_for ([@article, @article.comments.build]) do |form|%>
-        <p>
-            <%= form.text_field :commenter, placeholder:"Name"%>
-        </p>
-        <p>
-            <%= form.text_field :body, placeholder:"Comment here"%>
-        </p>
-        <p >
-            <%= form.submit class: "btn btn-info btn-sm"%>
-        </p
+<%= form_for ([@article, @article.comments.build]) do |form|%>
+
+    <div class="form-row align-items-center">
+        <% if user_signed_in? %>
+            <%= form.text_field :commenter, id: :comment_article_id, value: current_user.email.split("@")[0].capitalize, type: :hidden%>
+        <% end %>
+        
+        <div class="col-auto">
+            <%= form.text_field :body, placeholder:"Comment here", class:"form-control mb-2" ,style:"width:600px;"%> 
+        </div>
+        
+        <div class="col-auto">
+            <%= form.submit class: "btn btn-info mb-2"%>
+        </div>
+
     <%end%>
 </div>
