--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
         <table>
             <tr>
             <% if user_signed_in?%>
-                <%if current_user.id == @article.user_id %>
+                <%if current_user == @article.user %>
                 <td><%= link_to("Edit", edit_article_path, class: "btn btn-info btn-sm")%> |
                     <%= link_to("Delete", article_path, class: "btn btn-info btn-sm", method: :delete, data:{confirm: "are you sure?"})%></td>
                 <%end %>
