Added admin account and user_id in comment

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,6 +3,7 @@
     <div class="form-row align-items-center">
         <% if user_signed_in? %>
             <%= form.text_field :commenter, id: :comment_article_id, value: current_user.email.split("@")[0].capitalize, type: :hidden%>
+            <%= form.number_field :user_id, id: :comment_user_id, value: current_user.id, type: :hidden%>
         <% end %>
         
         <div class="col-auto">
