--- a/app/views/articles/archived.html.erb
+++ b/app/views/articles/archived.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Back", :back, class:"btn btn-info btn-sm"  %><br/><br/>
+<%= link_to "Back", articles_path , class:"btn btn-info btn-sm"  %><br/><br/>
 
 <h3>Archived Articles</h3>
 <% if (@count != 0) %>
