--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Back", :back, class:"btn btn-info btn-sm"  %><br/><br/>
+<%= link_to "Back to list", articles_path, class:"btn btn-info btn-sm"  %><br/><br/>
 
 <div class="card bg-light mb-3" >
     <div class="card-header"><strong>Auther:</strong> <%= @article.user[:email].split("@")[0].capitalize%></div>
@@ -8,7 +8,7 @@
         <table>
             <tr>
             <% if user_signed_in?%>
-                <%if current_user == @article.user %>
+                <%if (current_user == @article.user) or (current_user.admin) %>
                 <td><%= link_to("Edit", edit_article_path, class: "btn btn-info btn-sm")%> |
                     <%= link_to("Delete", article_path, class: "btn btn-info btn-sm", method: :delete, data:{confirm: "are you sure?"})%></td>
                 <%end %>
